--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
   <title>CornCoincs</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="shortcut icon" href="img/icone-app/Icone-moeda.png" type="image/x-icon">
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
   <app-root></app-root>
