--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,23 @@
 <!doctype html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <title>CornCoincs</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description"
+    content="Aplicativo de e-learning e e-commerce sobre educação financeira para educação infantil e ensino fundamental.">
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="shortcut icon" href="img/icone-app/Icone-moeda.png" type="image/x-icon">
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+  <link rel="shortcut icon" href="img/icone-app/Icone-moeda.png" type="image/x-icon">
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
